--- a/sito_modificato/kruskal-wallis-test.html
+++ b/sito_modificato/kruskal-wallis-test.html
@@ -526,7 +526,7 @@
                 </p>
               </li>
               <li>
-                <a href="https://calcdomain.com/median" class="text-blue-600 hover:underline">
+                <a href="https://calcdomain.com/median-calculator" class="text-blue-600 hover:underline">
                   Median &amp; Quartiles Calculator
                 </a>
                 <p class="text-gray-500 text-xs">
